[fuchun] #Tech add start.sh or stop.sh